src/test/deca/codegen/invalid/printdivfloat0.deca
// Description:
//    Affichage d'une division d'un float par 0
//
// Resultats:
//    Erreur : Une opération a dépassé la capacité maximale des flottants.
//

{
   float i = 5.2;
   println(i/0);
}

